# OpenCVLinux

./: README.md
CVHogHumanDetection/: CMakeLists.txt  README.md
CVHogHumanDetection/src/: opencvhog.cpp
CVHough/: CMakeLists.txt
CVHough/src/: linedetect.cpp
CVMorpglogoyEx/: CMakeLists.txt
CVMorpglogoyEx/src/: main.cpp
CVNMS/: CMakeLists.txt  README.md
CVNMS/src/: nms.cpp  nms.py
CVORCDigital/: CMakeLists.txt  README.md  build.sh  run.sh
CVORCDigital/src/: labeldata.cpp  preprocess.py  trainandtest.cpp  trainandtest.py  trainandtest24.cpp
CVPlateSVM/: CMakeLists.txt  README.md
CVPlateSVM/include/: trainsvm.h
CVPlateSVM/src/: trainsvm.cpp
CVSVMClassfier/: CMakeLists.txt  README.md  build.sh  run.sh
CVSVMClassfier/src/: main.cpp
DecisionTree/: CMakeLists.txt
DecisionTree/include/: DecisionTree.h
DecisionTree/src/: DecisionTree.cpp  DecisionTree.py  main.cpp
HandInKnn/: README.md
HandInKnn/src/: classDatingTest  classDatingTest.cpp  classfiAB  classfiAB.cpp  classfiDating  classfiDating.cpp
HandinBP/: README.md  bp.py
HandinSVM/: CMakeLists.txt  README.md
HandinSVM/include/: svm.h
HandinSVM/resource/: 数据说明.txt
HandinSVM/src/: main  main.cpp  svm.cpp
HandinSVM/src/libsvmtest/: README.md  livsvmwine  livsvmwine.model  livsvmwine.out  livsvmwinenolabel  main.cpp  splitdata.py  svm-scale  svm-train
HandinSVM/src/libsvmtest/resources/data/: libsvmwine12  libsvmwine12.model  libsvmwine12.txt  libsvmwine23.txt  libsvmwine31  libsvmwine31.model  libsvmwine31.out  libsvmwine31.txt  splitdata.py  svm-predict
HandinSVM/src/python/: 0.81alphaconfig.1.ini  README.md  alphaconfig.ini  svm.py  testsvm.py
opencv_test/: CMakeLists.txt
opencv_test/src/: test.cpp
