cmake_minimum_required(VERSION 2.6)
PROJECT(HOUGH)
set(PROJECT_VERSION "0.1")
find_package(OpenCV REQUIRED)
set(src src/linedetect.cpp)
ADD_EXECUTABLE( ${PROJECT_NAME} ${src} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  ${OpenCV_LIBS} )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(RESOURCES
	images
)
foreach(f ${RESOURCES})
file( COPY ${f} DESTINATION ${EXECUTABLE_OUTPUT_PATH}/)
endforeach(f)